<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <Button
        android:id="@+id/language_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="start|center_vertical"
        android:text="@string/text_choose_language"
        app:icon="@drawable/baseline_language_24"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/dictionary_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:gravity="start|center_vertical"
        app:icon="@drawable/baseline_menu_book_24"
        android:text="@string/dictionary"
        app:layout_constraintTop_toBottomOf="@id/language_button"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/numbers_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:gravity="start|center_vertical"
        android:text="@string/title_numbers"
        app:layout_constraintTop_toBottomOf="@id/dictionary_button"
        tools:ignore="MissingConstraints"
        app:icon="@drawable/ic_numbers_black_24dp"/>

    <Button
        android:id="@+id/mms_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:gravity="start|center_vertical"
        android:text="@string/text_mms"
        app:layout_constraintTop_toBottomOf="@id/numbers_button"
        tools:ignore="MissingConstraints"
        app:icon="@drawable/ic_mms_black_24dp"/>

    <Button
        android:id="@+id/help_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:gravity="start|center_vertical"
        android:text="@string/title_help"
        app:layout_constraintTop_toBottomOf="@id/mms_button"
        tools:ignore="MissingConstraints"
        app:icon="@drawable/ic_help_black_24dp"/>

    <Button
        android:id="@+id/ds_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:gravity="start|center_vertical"
        android:text="@string/text_ds"
        app:layout_constraintTop_toBottomOf="@id/help_button"
        tools:ignore="MissingConstraints"
        app:icon="@drawable/ic_ds_black_24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>